# console-miner

./: CMakeLists.txt  readme.md
include/: arguments.hpp  colors.hpp  functions.hpp  game.hpp  global.hpp  player.hpp  tilemap.hpp
src/: arguments.cpp  colors.cpp  functions.cpp  game.cpp  global.cpp  main.cpp  player.cpp  tilemap.cpp
